[package]
name = "niodemo"
version = "0.1.0"
authors = ["exfly <exflyg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", path = 'lib/mio', features = ["os-poll", "tcp", "udp"]}
env_logger = { version = "0.6.2", default-features = false }
log = "0.4.8"
